RESOLVED FIXED259623
Keyboard scroll doesn't stop after pressing down arrow if `keyup` is default prevented
https://bugs.webkit.org/show_bug.cgi?id=259623
Summary Keyboard scroll doesn't stop after pressing down arrow if `keyup` is default ...
Richard Robinson
Reported 2023-07-28 22:06:44 PDT
Attachments
Richard Robinson
Comment 1 2023-07-28 22:11:14 PDT
EWS
Comment 2 2023-07-31 09:59:15 PDT
Committed 266425@main (768a90b9b462): <https://commits.webkit.org/266425@main> Reviewed commits have been landed. Closing PR #16209 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.