Keyboard scroll doesn't stop after pressing down arrow if `keyup` is default prevented https://bugs.webkit.org/show_bug.cgi?id=259623 rdar://112396756

Reviewed by Tim Horton.

If a page prevents the default handling of the `keyup` event, but not `keydown`, a keyboard
scroll will be able to be started, but will never end because `EventHandler::defaultKeyboardEventHandler`
will never get called.

Fix by preemptively handling `keyup` in `EventHandler::internalKeyEvent` so that keyboard scrolls
will always be properly terminated even if the event is default-prevented.

* LayoutTests/fast/scrolling/mac/keyboard-scroll-stops-with-keyup-prevented-expected.txt: Added.
* LayoutTests/fast/scrolling/mac/keyboard-scroll-stops-with-keyup-prevented.html: Added.
* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::internalKeyEvent):
(WebCore::EventHandler::defaultKeyboardEventHandler):

Canonical link: https://commits.webkit.org/266425@main